<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C0C0C"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtnomes2"
        android:layout_width="410dp"
        android:layout_height="111dp"
        android:background="#424344"
        android:gravity="center"
        android:text="@string/seja_bem_vindo_ao_ceforc"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="279dp"
        android:layout_height="312dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424">

        <EditText
            android:id="@+id/txtanonascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insira_o_ano_de_nascimento"
            android:inputType="number"
            android:textColor="@color/design_default_color_primary_dark"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="14sp"
            android:autofillHints="" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/txtanoatual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insira_o_ano_actual"
            android:inputType="number"
            android:textColor="@color/design_default_color_primary_dark"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="14sp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submit"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/txtidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#424344"
            android:hint="@string/idade_da_pessoa"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/txt2050"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#424344"
            android:hint="@string/idade_em_2050"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>